<resources>
    <string name="app_name">eShopping</string>
    <string name="title_shopping">Trang chủ</string>
    <string name="title_user">Danh mục</string>
    <string name="title_notifications">Giỏ hàng</string>
    <string name="title_more">Thêm</string>
    <string name="user_login">  Số điện thoại</string>
    <string name="user_password"> Mật khẩu</string>
    <string name="btn_dangnhap"> Đăng nhập</string>
    <string name="tv_dangnhap">Đăng nhập tài khoản</string>
    <string name="btn_quenmatkhau">Quên mật khẩu?</string>
    <string name="tv_hoac">Hoặc</string>
    <string name="tv_dangky">Đăng ký tài khoản</string>
    <string name="hint_hoten">Họ và tên đầy đủ</string>
    <string name="hint_diachi">Địa chỉ</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Số điện thoại</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_re_password">Nhập lại mật khẩu</string>
    <string name="cb_license">Tôi đã đọc và hiểu rõ các điều khoản và chính sách của eShopping</string>
    <string name="btn_dangky">Đăng ký</string>
    <string name="tv_dangnhap_dangky">Đăng nhập / Đăng ký</string>
    <string name="et_newproduct">Sản phẩm mới nhất:</string>
    <string name="tv_loaisp">Loại sản phẩm</string>
    <string name="tv_tensp">Tên sản phẩm</string>
    <string name="app_timkiem">Tìm kiếm sản phẩm</string>
    <string name="tb_phone">Điện thoại</string>
    <string name="tb_laptop">Laptop</string>
    <string name="tb_tablet">Tablet</string>
    <string name="tb_phukien">Phụ kiện</string>
    <string name="tb_detail">Chi tiết sản phẩm</string>
    <string name="btn_addToCart">Thêm vào giỏ hàng</string>
    <string name="tv_motasp">Mô tả sản phẩm: </string>
    <string name="tb_cart">Giỏ hàng</string>
    <string name="tv_noitem">Giỏ hàng bạn đang trống</string>
    <string name="tv_totalCost">Tổng tiền: </string>
    <string name="btn_thanhtoan">Thanh toán giỏ hàng</string>
    <string name="btn_tieptucmuahang">Tiếp tục mua hàng</string>
    <string name="tv_noresult">Không có sản phẩm</string>
    <string name="title_activity_login">Sign in</string>
    <string name="tv_gioitinh">Giới tính :</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="namsinh">Năm sinh: </string>
    <string name="tv_thongtinkh">Thông tin khách hàng</string>
    <string name="hint_tenkh">Nhập tên khách hàng</string>
    <string name="hint_sdtkh">Nhập số điện thoại khách hàng</string>
    <string name="hint_emailkh">Nhập email khách hàng</string>
    <string name="button_xacnhan">Xác nhận</string>
    <string name="button_trove">Trở về</string>
    <string name="tv_chucmung">Chúc mừng bạn đã đặt hàng thành công</string>
    <string name="tv_lienhe">Cám ơn bạn đã sử dụng dịch vụ của chúng tôi
    Chúng tôi sẽ liên lạc với bạn sớm nhất để xác nhận đơn đặt hàng</string>
    <string name="button_trangchu">Trang chính</string>
    <string name="button_thoat">Thoát</string>
    <string name="xoa">xoaGiohang</string>
    <string name="diachi">Giao đến địa chỉ này</string>
    <string name="themdiachi">Thêm địa chỉ mới</string>
    <string name="thanhtoan">Tiếp tục</string>
    <string name="hinhthucgiaohang">Hình thức giao hàng</string>
    <string name="dukiengiaohang">Giao hàng tiêu chuẩn (dự kiến giao hàng vào ngày </string>
    <string name="freeship">Miễn phí vận chuyển!</string>
    <string name="hinhthucthanhtoan">Hình thức thanh toán</string>
    <string name="ship_cod">Thanh toán tiền mặt khi nhận hàng.</string>
    <string name="napas">Thẻ ATM nội địa/Internet Banking</string>
    <string name="visa">Thanh toán bằng thẻ quốc tế Visa, Mastercard, JSB</string>
    <string name="quaylai">Quay lại</string>
    <string name="hotennguoinhan">Họ tên đầy đủ người nhận</string>
    <string name="diachicuthe">Số nhà, đường, phường, xã, ...</string>
    <string name="tv_mycart">Đơn hàng của tôi</string>
</resources>
