<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/tv_dangnhap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_dangky"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_hoten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_dangnhap"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_hoten"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_hoten"
                    android:inputType="text"
                    android:textSize="16dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_diachi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_hoten"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_diachi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_diachi"
                    android:inputType="text"
                    android:textSize="16sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_diachi"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp"/>
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:id="@+id/acrb_gioitinh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_email"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_gioitinh"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textColor="#000"
                    android:layout_gravity="center"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:text="@string/male"
                        android:textSize="16sp"
                        android:padding="3dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:text="@string/female"
                        android:textSize="16sp"
                        android:padding="3dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_namsinh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/acrb_gioitinh">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/namsinh"
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:layout_gravity="center"/>

                <Spinner
                    android:id="@+id/spinner_namsinh"
                    android:background="@drawable/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:paddingLeft="100dp"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_namsinh"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"
                    android:textSize="16sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_phone"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_su_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_retype_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_password"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_retype_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_re_password"
                    android:inputType="textPassword"
                    android:textSize="16sp"/>
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/cb_dieukhoan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_retype_password"
                android:layout_marginTop="16dp"
                android:text="@string/cb_license"/>
            
            <Button
                android:id="@+id/btn_dangky"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_dangky"
                android:layout_below="@+id/cb_dieukhoan"
                style="@style/button"/>
        </RelativeLayout>
    </ScrollView>

</FrameLayout>