<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignInFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tv_dangnhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_dangnhap"
            android:textSize="16sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_dangnhap"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_login"
                android:inputType="phone"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_phone"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_password"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_password"
            android:layout_marginTop="5dp"
            android:text="Lưu thông tin đăng nhập" />

        <TextView
            android:id="@+id/tv_quenmatkhau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cb_remember"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="59dp"
            android:text="@string/btn_quenmatkhau"
            android:textColor="@color/color_blueText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_dangnhap"
            style="@style/button"
            android:layout_below="@+id/tv_quenmatkhau"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/btn_dangnhap" />

    </RelativeLayout>


</FrameLayout>