<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    tools:context=".activity.CartActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_cart"
        app:title="@string/tb_cart"
        app:titleTextColor="@color/color_whiteText"
        android:background="#af9e48"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <LinearLayout
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_cart_noitem"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_noitem"
                android:textSize="22sp"/>

            <ListView
                android:id="@+id/lv_cart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_totalCost"
                    android:textColor="#000"
                    android:textSize="22sp"/>
            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_totalcost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_totalCost"
                    android:textColor="@color/color_redText"
                    android:textSize="22sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

    <Button
        android:id="@+id/btn_thanhtoan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:textColor="@color/color_whiteText"
        android:background="@drawable/background_btn"
        android:layout_margin="10dp"
        android:text="@string/btn_thanhtoan"/>

    <Button
        android:id="@+id/btn_tieptucmuahang"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:textColor="@color/color_whiteText"
        android:background="@drawable/background_btn"
        android:layout_margin="10dp"
        android:text="@string/btn_tieptucmuahang"/>
</LinearLayout>