<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#77A3BA"
    tools:context=".activity.ThongtinkhachhangActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/boder"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/tv_chucmung"
            android:textColor="#0a0a0a"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_congra_96px" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="80dp">
            <TextView
                android:gravity="center"
                android:textColor="#000"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/tv_lienhe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                android:id="@+id/buttontrangchu"
                android:layout_width="120dp"
                android:layout_height="wrap_content"

                android:background="#6af1ff"
                android:padding="10dp"
                android:text="@string/button_trangchu"
                android:textColor="#28588c"
                android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>