<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ThemdiachiActivity"
    >

    <LinearLayout
        android:id="@+id/linearlayout_themdchi"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/color_blueText">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icons8_back_filled_48"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/themdiachi"
            android:textColor="@color/color_whiteText"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/linearlayout_themdchi"
        android:layout_margin="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_hoten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_tennguoinhan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hotennguoinhan"
                android:inputType="text"
                android:textSize="16dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_phonengnhan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_phonengnhan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_tinh"
            android:background="@drawable/spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="100dp"/>

        <Spinner
            android:id="@+id/spinner_huyen"
            android:background="@drawable/spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="100dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_diachicuthe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_diachicuthe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/diachicuthe"
                android:inputType="text"
                android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#efeded"
        android:layout_alignParentBottom="true">

        <Button
            style="@style/btn"
            android:id="@+id/btn_luu"
            android:text="Lưu"
            android:layout_margin="10dp"/>
    </LinearLayout>
</RelativeLayout>