<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ProducDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_detail"
        app:title="@string/tb_detail"
        app:titleTextColor="@color/color_whiteText"
        android:background="#cf3ad4"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_detail"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_detail_tensp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:textColor="#000"
                android:textStyle="bold"
                android:text="@string/tb_detail"/>

            <TextView
                android:id="@+id/tv_detail_giasp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_redText"
                android:text="@string/tb_detail"
                android:textSize="18sp"
                android:layout_margin="5dp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/spinner"
                android:background="@drawable/spinner"
                android:padding="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <Button
                android:id="@+id/btn_addToCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:text="@string/btn_addToCart"
                android:background="@drawable/background_btn"
                android:textColor="@color/color_whiteText"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="26sp"
            android:layout_margin="5dp"
            android:textColor="@color/color_blueText"
            android:text="@string/tv_motasp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width = "match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_motasp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:paddingBottom="10dp"
                android:textSize="20sp"
                android:text="@string/tv_motasp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </ScrollView>
    </LinearLayout>
</LinearLayout>