<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#77A3BA"
    tools:context=".activity.ThongtinkhachhangActivity">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/boder"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textStyle="bold"
            android:textColor="#0a0a0a"
            android:textSize="30sp"
            android:text="@string/tv_thongtinkh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_margin="15dp"
                android:id="@+id/edittexttenkh"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
                <!--android:hint="@string/hint_tenkh"-->

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_margin="15dp"
                android:id="@+id/edittextsdtkh"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
                <!--android:hint="@string/hint_sdtkh"-->

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_margin="15dp"
                android:id="@+id/edittextemailkh"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
                <!--android:hint="@string/hint_emailkh"-->

        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_marginRight="70dp"
                android:background="#6af1ff"
                android:textColor="#28588c"
                android:textSize="15sp"
                android:padding="10dp"
                android:id="@+id/buttonxacnhan"
                android:text="@string/button_xacnhan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:background="#6af1ff"
                android:textColor="#28588c"
                android:textSize="15sp"
                android:padding="10dp"
                android:id="@+id/buttontrove"
                android:text="@string/button_trove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>